# ParkSpaceSharingMobile

./: CMakeLists.txt  login.qml  main.qml  register.qml
include/: login.h  register.h
src/: login.cpp  main.cpp  register.cpp
